# trial

./: .gitignore  Cargo.toml  README.md
.scratch/: clean.sh
AWS/amprify/: .gitignore  README.md  package-lock.json  package.json
AWS/amprify/amplify/: team-provider-info.json
AWS/amprify/src/: aws-exports.ts  index.tsx
AWS_Lambda/Denoのコンテナイメージ/: Dockerfile  hello.ts
AWS_Lambda/Nodeのコンテナイメージ/: .gitignore  package-lock.json  package.json
AWSのAPIGateway&Lambda(コンテナイメージ)を試す/: README.md
AWSのAPIGateway&Lambda(コンテナイメージ)を試す/lambda-container/src/: lib.rs
Auth/Cognitoを試す/: README.md
Auth/OAuth2の学習用サーバー/: package.json
Auth/aws_cognito/: .gitignore
Cognitoを試す/terraform/: setting.tf
Gyazoのeasy_authのサンプル/: README.md  package-lock.json  package.json
JavaScript/ASTの練習/: convert.js  package.json  unparse.js
JavaScript/ast_practice/: README.md  parse.js
OAuth2の学習用サーバー/: README.md  package-lock.json
Other/Gyazoのeasy_authのサンプル/: index.js
Rust/Wasmerを使ってみる/: README.md
Rust/Wasmerを使ってみる/genuuid/: Cargo.toml
Rust/actix-web_server/: Cargo.toml
Rust/simple_web_crawler/src/: main.rs
Rust/簡易S3クライアント/: Cargo.toml
Rust/簡易S3クライアント/src/: main.rs
_rust/simple_web_crawler/: README.md
auth/oauth_practice_server/src/: app.js
aws-api-gateway-and-lambda-with-rust-container/: .dockerignore  Dockerfile  README.md  deploy.sh
aws-api-gateway-and-lambda-with-rust-container/lambda-container/: Cargo.toml
aws/amplify/: .graphqlconfig.yml  README.md
aws/amplify/amplify/: team-provider-info.json
aws/lambda/deno_container_image/: README.md
aws/lambda/nodejs_container_image/: Dockerfile  README.md  index.js
cognito/client/: package-lock.json  package.json
cognito/client/src/: App.js  index.css
cognito/terraform/: cognito_user_pool.tf  setting.tf
docs/: CNAME  template.html
oauth2-test-server/: package.json
oauth2-test-server/src/authorization_server/: index.js
oauth2-test-server/src/lib/: basic_auth.js  random.js
oauth2-test-server/src/sqlite3/: index.js
rust-actix-web/: README.md
rust-actix-web/src/: main.rs
rust/actix-web_server/: README.md
rust/aws_lambda_example/: .gitignore  Cargo.toml  deploy.sh
rust/aws_lambda_example/src/: main.rs
rust/gen_rand/: Cargo.toml
rust/get_site_info_by_url/: Cargo.toml
rust/get_title_by_url/: Cargo.toml
rust/get_title_by_url/src/: main.rs
rust/sentry-event-cli/: README.md
rust/tokio_practice/: Cargo.toml  README.md
rust_web_crawler/: Cargo.toml  README.md
src/: main.rs  sentry_data.rs  user_info.rs
wapm_packages/.bin/: qjs  quickjs
(+38 files in other folders)
