[package]
name = "web_crawler"
version = "0.1.0"
authors = ["hyiromori <hyiromori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
eyre = "0.6"
serde_json = "1.0"
