[package]
name = "lambda-container"
version = "0.1.0"
authors = ["hyiromori <hyiromori@gmail.com>"]
edition = "2018"

# 実行ファイルの配置場所を変更しているため明示的に指定する
[[bin]]
name = "lambda-container"
path = "src/bin/lambda-container.rs"

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1", features = ["derive"] }
