[package]
name = "aws_lambda_example"
version = "0.1.0"
authors = ["mryhryki <mryhryki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "client", "server", "stream", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
bytes = "1.0"
http = "0.2"
async-stream = "0.3"
futures = "0.3"
tracing-error = "0.1.2"
tracing = { version = "0.1", features = ["log"] }
tower-service = "0.3"
tokio-stream = "0.1.2"

[dev-dependencies]
tracing-subscriber = "0.2"
once_cell = "1.4.0"
simple_logger = "1.6.0"
log = "^0.4"
simple-error = "0.2"
