[package]
name = "aws_lambda_example"
version = "0.1.0"
authors = ["mryhryki <mryhryki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
rand = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
