[package]
name = "get_title_by_url"
version = "0.1.0"
authors = ["mryhryki <mryhryki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
html_parser = "0.6.2"
